--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e4216c7f",
    "metadata": {},
    "outputs": [],
@@ -26,9 +26,9 @@
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from tensorflow import keras  # Impor keras untuk model CNN\n",
+    "from tensorflow import keras  \n",
     "\n",
-    "# Impor file-file Python Anda\n",
+    "\n",
     "import variables as v\n",
     "import dataset\n",
     "import features\n",
